# lcbinint

./: .gitignore  CMakeLists.txt  Makefile  README.md  nunolog  pyproject.toml  terrestrial_parallax_usage.note
.note/: .gitignore  adaptive-precision-redesign.md  completion-phase1-6-summary.md  current-state.md  finite-source-strategy.md  grazing-caustic-imagearea4-failure.md  lcbinint_impl_status.md  lcbinint_sampler_design.md  ld-performance-sweep.md  overlap-component-redesign.md  plot_grazing_caustic_failure.py  progress_sampler_arch.md  run_global_diagnostics.sh  session-2026-06-22-adaptive-convergence.md  session-2026-06-23-fold-overlap-aliasing.md  session-2026-06-23-local-adaptive-defaults.md  session-2026-06-23-wide-caustic-error.md  session-2026-06-24-after-point-opt-tests.md  session-2026-06-24-default50-vbbl-speed-map.md  session-2026-06-24-point-hex-core-benchmark.md  session-2026-06-24-python-api-direction.md  session-2026-06-25-convergence-review.md  session-2026-06-25-point-source-sg-optimization.md  session-2026-06-25-polar-mode-evaluation.md  session-2026-06-26-polar-auto-mode.md  session-2026-06-26-triple-lens-handoff.md  session-2026-06-27-triple-lens-current-handoff.md  session-2026-06-30-fluxes-limb-darkening-tau.md  terrestrial_parallax.md  terrestrial_parallax_usage.md  vbm-consistency.md
build_debug/: CMakeCache.txt  CTestTestfile.cmake  DartConfiguration.tcl  Makefile  cmake_install.cmake  test_core
build_new/: CMakeCache.txt  CTestTestfile.cmake  DartConfiguration.tcl  Makefile  cmake_install.cmake  test_core
build_new/Testing/Temporary/: CTestCostData.txt
build_nolto/: CMakeCache.txt  CTestTestfile.cmake  DartConfiguration.tcl  Makefile  cmake_install.cmake  test_core
docs/: design-python-model.md  migration-plan.md
example/compare-vbbl/: lcbinint_vbm_light_curve_comparison.ipynb
example/compare-vbbl/.ipynb_checkpoints/: lcbinint_vbm_light_curve_comparison-checkpoint.ipynb
example/compare-vbm/: README.md  lcbinint_vbm_light_curve_comparison.ipynb  lcbinint_vbm_light_curve_comparison_triple.ipynb  quickstart_compare_vbm.py  quickstart_compare_vbm_triple.py
example/compare-vbm/.ipynb_checkpoints/: lcbinint_vbm_light_curve_comparison-checkpoint.ipynb
example/kepler-lom/: README.md  kepler_lom_reference_time.py
example/light-curve/: light_curve_modes.ipynb
example/sampler/: sampler_quickstart.ipynb
include/lcbinint/: lcbinint.h
python/: bind_bayes.cpp  bind_bayes.hpp  bind_lc.cpp  bind_lc.hpp  bind_obs.cpp  bind_obs.hpp  bind_optimize.cpp  bind_optimize.hpp  bind_sample.cpp  bind_sample.hpp  lcbinint_pybind.cpp
python/lcbinint/: __init__.py  model.py  sampler.py
src/lcbinint/: lcbinint.cpp  types.hpp
src/lcbinint/bayes/: model.cpp  model.hpp  prior.cpp  prior.hpp
src/lcbinint/lc/: effects.hpp  evaluator.hpp  light_curve.cpp  light_curve.hpp  parameters.cpp  parameters.hpp
src/lcbinint/magnification/: finite_source_magnifier.cpp  finite_source_magnifier.hpp  point_source_magnifier.cpp  point_source_magnifier.hpp
src/lcbinint/math/: polynomial_roots.cpp  polynomial_roots.hpp
src/lcbinint/model/: lens_model.cpp  lens_model.hpp  lens_parameters.cpp  lens_parameters.hpp  lens_system.cpp  lens_system.hpp  orbital_motion.cpp  orbital_motion.hpp  trajectory.cpp  trajectory.hpp  triple_lens_geometry.cpp  triple_lens_geometry.hpp
src/lcbinint/obs/: coordinates.hpp  event.cpp  event.hpp  light_curve_data.cpp  light_curve_data.hpp
src/lcbinint/optimize/: differential_evolution.cpp  differential_evolution.hpp  levenberg_marquardt.cpp  levenberg_marquardt.hpp  result.hpp
src/lcbinint/sample/: chain.cpp  chain.hpp  ensemble_sampler.cpp  ensemble_sampler.hpp  move.hpp  sampler_state.hpp  stretch_move.cpp  stretch_move.hpp
tests/: conftest.py
tests/diagnostics/: adaptive_source_bins_sweep.py  benchmark_point_hex.cpp  diag_image_detection.py  diag_planet.py  diag_planet2.py  diag_resonant.py  diag_time_context_effect.py  diag_wide_caustic_geometry.py  diag_wide_caustic_peak_detail.py  diag_wide_caustic_peak_error.py  diag_wide_caustic_rho_sweep.py  diag_wide_equal_mass.py  global_point_sweep.py  ld_source_bins_rho_sweep.py  point_integration_benchmark.py  polar_cartesian_mode_sweep.py  test_consistent_times.py  test_grid_size.py  test_high_bins.py  test_local_resolution.py  test_time_spacing.py  timing_breakdown.py  triple_finalize_diagnostic.py  triple_finite_sweep.py  triple_reference_compare.py  triple_seed_diagnostic.py
tests/regression/: test_adaptive_precision_redesign.py  test_component_union_validation.py  test_solver_vbm_consistency.py  test_terrestrial_parallax.py  test_triple_lens_point_source.py  test_vbm_consistency.py  test_xallarap.py
tests/unit/: test_core.cpp
