[build-system]
requires = ["scikit-build-core>=0.5", "pybind11>=2.10", "numpy"]
build-backend = "scikit_build_core.build"

[project]
name = "lcbinint"
version = "0.0.0"
description = "Python bindings for the lcbinint microlensing C++ core"
requires-python = ">=3.9"
dependencies = ["numpy"]

[project.optional-dependencies]
test = ["pytest", "VBMicrolensing"]

[tool.scikit-build]
cmake.build-type = "Release"

[tool.pytest.ini_options]
testpaths = ["tests"]
